<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/itBusqueda"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/buscar_contacto"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="always"/>
    <item
            android:id="@+id/itSwitch"
            android:title="@string/cambiar_vista"
            app:showAsAction="always"
            app:actionLayout="@layout/switch_item"/>

    <item android:title="@string/agregar_contacto"
          android:id="@+id/itNuevo"
          app:showAsAction="always"
          android:icon="@drawable/ic_add_black_24dp"/>

</menu>