<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detalle">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AlertDialog.AppCompat.Light"
            tools:ignore="MissingConstraints"/>

    <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp" app:srcCompat="@drawable/foto_06" android:id="@+id/ivFotoNuevo"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginTop="16dp"/>
    <TextView
            android:text="Lee Juan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivFotoNuevo"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="CD Project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tvEmpresa" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="35 Años"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tvEdad"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tvPeso" android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.56"/>
    <TextView
            android:text=" 45.0 Kg"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/tvPeso"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="52 25 35 85 41"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/tvTelefono" app:layout_constraintStart_toEndOf="@+id/tvPeso"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.4"/>
    <TextView
            android:text="Nezahualcoyotl  455"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tvDireccion " android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="elenanaguilar34@gmail.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:text="@string/cambiar_peso"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView"/>
    <TextView
            android:text="@string/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <TextView
            android:text="@string/cambiar_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
            android:id="@+id/textView3"/>
    <TextView
            android:text="@string/cambiar_dirección"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvPeso"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:id="@+id/textView4"/>
    <TextView
            android:text="@string/cambiar_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.507" app:layout_constraintTop_toBottomOf="@+id/tvDireccion "
            android:layout_marginTop="16dp" android:id="@+id/textView5"/>
</android.support.constraint.ConstraintLayout>